# GAN_zoo

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python_pytest.yaml
datasets/: download_cyclegan_dataset.sh  download_pix2pix_dataset.sh
gans_zoo/: aug_utils.py  data.py  utils.py
gans_zoo/callbacks/: cyclegan_telegram.py  cyclegan_tensorboard.py  gan_telegram.py  paired_image_sampler.py  unpaired_sampler.py
gans_zoo/cyclegan/: main.py  network.py  replay_buffer.py  scheduler.py  trainer.py
gans_zoo/data/: cache_loader.py  common.py  gan_data.py  paired_data.py  unpaired_data.py
gans_zoo/dcgan/: main.py  network.py  trainer.py
gans_zoo/pggan/: README.md  data.py  layers.py  loss.py  loss_criterion.py  main.py  mini_batch_stddev_layer.py  network.py  trainer.py
gans_zoo/pix2pix/: main.py  network.py  trainer.py
gans_zoo/transforms/: paired_transform.py
telegram_logger/: get_chat_id.py  logger.py
tests/callbacks/: test_paired_image_sampler.py
tests/cyclegan/: test_network.py  test_training.py
tests/data/: test_cache_loader.py  test_images_folder.py  test_paired_dataset.py
tests/dcgan/: test_dcgan.py  test_training.py
tests/pggan/: test_layers.py  test_loss.py
tests/pix2pix/: test_pix2pix.py  test_train_pix2pix.py
tests/pytest_check/: test_test.py
tests/telegram_logger/: test_logger.py
